--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "firebase": "^3.7.2",
-    "gcloud": "^0.37.2"
+    "gcloud": "^0.37.2",
+    "nodemon": "^1.11.0"
   }
 }
