--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bounce.js": "^0.8.2",
     "express": "^4.15.2",
     "firebase": "^3.7.2",
     "gcloud": "^0.37.2",
+    "nodemailer": "^3.1.7",
     "nodemon": "^1.11.0"
   }
 }
