--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^3.7.2",
     "gcloud": "^0.37.2",
     "nodemailer": "^3.1.7",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sendgrid": "^4.8.2"
   }
 }
